# wrumc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-sdl.sh  emscripten.txt  index.html  meson.build  run-web.sh
apps/client/: CMakeLists.txt  start-server.sh
apps/client/src/: main.cpp
apps/client/src/net/: isocket.hpp  socket.hpp  socket_emscripten.cpp
apps/client/src/utils/: assets.cpp
apps/server/: CMakeLists.txt
apps/server/src/: main.cpp
client/: meson.build
client/src/: main.cpp  stack.hpp
client/src/entity/: car.hpp
client/src/net/: isocket.hpp  socket_emscripten.cpp  socket_emscripten.hpp  socket_native.cpp  socket_native.hpp
client/src/scene/: game.cpp  game.hpp  manager.cpp  manager.hpp  scene.hpp
server/: meson.build
server/src/: lobby.hpp  main.cpp
shared/: CMakeLists.txt  meson.build
shared/net/: codec.hpp  msg.cpp  msg.hpp
src/: main.cpp  stack.cpp  stack.hpp
src/net/: socket.cpp  socket_emscripten.hpp  socket_native.cpp  socket_native.hpp
src/utils/: assets.hpp
